Fix input range on Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,9 @@ body{
 	background-color: var(--main-bg);
 	color: var(--text-primary);
 }
+h1{
+	font-size: 32px;
+}
 #theme-title{
 	font-size: 12px;
 }
@@ -83,6 +86,7 @@ body{
 	padding: .25rem;
 	background-color: var(--second-bg);
 	width: 100%;
+	height: 22px;
 }
 #theme-select::-webkit-slider-thumb{
 	appearance: none;
@@ -95,6 +99,7 @@ body{
 	width: 15px;
 	height: 15px;
 	border-radius: 1rem;
+	border: 1px;
 	background: var(--key-equal-bg);
 }
 #theme-select::-webkit-slider-thumb:hover, #theme-select::-moz-range-thumb:hover{
